--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/icon/icon.png"
-  
+
 flutter:
   uses-material-design: true
+  assets:
+    - "assets/"
+    - "assets/icon/"
